uprava statistik pro desktop

--- a/app/components/map/overlays.menu.component.html
+++ b/app/components/map/overlays.menu.component.html
@@ -20,6 +20,7 @@
 						</a>
 					</li>
 				</template>
+        <li class="divider dropdown-divider"></li>
 				<li role="menuitem" class="layerLegend">
 					<span class="layerTextLegend">
                Ln = Hlukový indikátor pro noc<br>
