uprava loga a search boxu

--- a/app/components/map/overlays.search.component.html
+++ b/app/components/map/overlays.search.component.html
@@ -1,8 +1,11 @@
 <!--STANDARD-->
-<div id="overlaysSearchId" class="overlaysSearchStandard" *hideItDevice="['mobile']">
-    <logo></logo>
-    <search></search>
+<div id="overlaysSearchId" class="form-group has-success has-feedback overlaysSearchStandard" *hideItDevice="['mobile']">
+    <div class="input-group">
+        <span class="input-group-addon"><logo></logo></span>
+        <search></search>
+    </div>  
 </div>
+
 <!--MOBILE-->
 <div id="overlaysSearchId" class="overlaysSearchMobile" *showItDevice="['mobile']">
     <div class="mobileTop">
