--- a/app/components/map/search.component.html
+++ b/app/components/map/search.component.html
@@ -1,4 +1,5 @@
 <!--STANDARD-->
-<input id="pac-input" class="controls pac-input" type="text" placeholder="Vyhledat místo" *hideItDevice="['mobile']">
+<input id="pac-input" class="controls form-control pac-input" type="text" placeholder="Vyhledat místo" *hideItDevice="['mobile']" aria-describedby="inputGroupSuccess1Status">
+
 <!--MOBILE-->
 <input id="pac-input" class="controls pac-input-M" type="text" placeholder="Vyhledat místo" *showItDevice="['mobile']">
