--- a/app/components/map/search.component.html
+++ b/app/components/map/search.component.html
@@ -1,5 +1,1 @@
-<!--STANDARD-->
-<input id="pac-input" class="controls form-control pac-input" type="text" placeholder="Vyhledat místo" *hideItDevice="['mobile']" aria-describedby="inputGroupSuccess1Status">
-
-<!--MOBILE-->
-<input id="pac-input" class="controls pac-input-M" type="text" placeholder="Vyhledat místo" *showItDevice="['mobile']">
+<input id="pac-input" class="controls form-control pac-input" type="text" placeholder="Vyhledat místo" aria-describedby="inputGroupSuccess1Status">
