--- a/app/components/statistics/chart.component.html
+++ b/app/components/statistics/chart.component.html
@@ -1,6 +1,6 @@
 
 <div id="tabs" class="chartDesktop" *hideItDevice="['mobile']">
-    <canvas id="{{chartId}}" width=570 height=200 style=" margin-left: 10px; padding-top: 10px; padding-right: 10px;"></canvas>
+    <canvas id="{{chartId}}" width=570 height=200 style=""></canvas>
 </div>
 <div id="tabs" class="chartMobile" *showItDevice="['mobile']">
     <canvas id="{{chartId}}" style="padding-top: 5px; padding-right: 5px;"></canvas>
