--- a/app/components/about.app.component.html
+++ b/app/components/about.app.component.html
@@ -1,9 +1,9 @@
 <div id="aboutAppId" class="aboutApp" [class.aboutApp]="!isMobile()" [class.aboutAppMobile]="isMobile()">
 
-	<button   (click)="lgModal.show()" type="button" class="btn btn-default aboutAppButton" [class.aboutAppButton]="!isMobile()" [class.aboutAppButtonM]="isMobile()"> 
+	<button  (click)="lgModal.show()" type="button" class="btn btn-default" [class.aboutAppButton]="!isMobile()" [class.aboutAppMobileButton]="isMobile()"> 
         <!--<img class="aboutAppIcoDown" src="..\app\images\question.png">-->
 				<span class="glyphicon glyphicon-question-sign" aria-hidden="true"></span>
-				O webu
+				<span *hideItDevice="['mobile']">O webu</span>
   </button>
 
 
