--- a/app/components/map/overlays.menu.component.css
+++ b/app/components/map/overlays.menu.component.css
@@ -1,8 +1,18 @@
 /*STANDARD VERSION*/
-#overlaysMenuId {
+.overlaysMenuDesktop {
   position: absolute;
   right: 112px;
   top: 10px;
+}
+
+.overlaysMenuMobile {
+  position: absolute;
+  right: 50px;
+  top: 10px;
+}
+
+.overlaysMenuMobile .btn{
+ padding: 9px;
 }
 
 .layerTextLegend {
@@ -18,8 +28,8 @@
 }
 
 .layerHeader {
-  font-weight: 400;
-  font-size: larger;
+  font-weight: bold;
+  /*font-size: larger;*/
   margin-left: 7px;
 }
 
