--- a/app/components/map/overlays.search.component.css
+++ b/app/components/map/overlays.search.component.css
@@ -1,11 +1,20 @@
-#overlaysSearchId {
+.overlaysSearchDesktop {
   position: absolute;
   left: 10px;
   top: 10px;
+  width: 400px;
+}
 
-  /*border-radius: 4px 4px 4px 4px;
-  -moz-border-radius: 4px 4px 4px 4px;
-  -webkit-border-radius: 4px 4px 4px 4px;*/
+.overlaysSearchMobile {
+  position: absolute;
+  left: 10px;
+  top: 10px;
+   /*width: 100%;*/
+  margin-right: 95px;
+}
+
+.smallBorder{
+  padding: 6px;
 }
 
 /*.overlaysSearchMobile {
