--- a/app/components/map/search.component.css
+++ b/app/components/map/search.component.css
@@ -1,5 +1,7 @@
 .pac-input {
-  width: 200px;
+  /*width: 200px;*/
+    border-top-right-radius: 4px !important;
+    border-bottom-right-radius: 4px !important;
 }
 
 /*
