--- a/app/components/statistics/senzor.menu.component.css
+++ b/app/components/statistics/senzor.menu.component.css
@@ -12,13 +12,28 @@
 }
 
 
-#senzorMenuId {
+.senzor-button {
   position: absolute;
-  right: 416px;
+  right: 410px;
   top: 10px;
 
   /*z-index: 10 !important;
   margin-right: 10px auto;
   margin-top: 10px;
   height: 38px;*/
+}
+
+.senzor-button-mobile {
+  position: absolute;
+  right: 50px;
+  top: 50px;
+
+  /*z-index: 10 !important;
+  margin-right: 10px auto;
+  margin-top: 10px;
+  height: 38px;*/
+}
+
+.senzor-button-mobile .btn {
+  padding: 9px;
 }
