--- a/app/components/statistics/statistics.component.css
+++ b/app/components/statistics/statistics.component.css
@@ -1,28 +1,23 @@
 /*STANDARD*/
-.statStandard {
+/*.statStandard {
   position: absolute;
   right: 256px;
   top: 10px;
+}*/
+.statisMenuButtonDesktop{
+    position: absolute;
+    right: 256px;
+    top: 10px;
 }
 
-/*MOBILE*/
-.statMobile {
-  position: absolute;
-  right: 78px;
-  top: 10px;
-}
-
-.desktopButton{
-    float: right;
-}
-.statisticsDesktop{
+.statisContentDesktop {
+    position: absolute;
+    right: 10px;
+    top: 46px;
     width: 590px;
-    height: 442px !important;
-    background-color: white;
+    height: 452px;
 
-    margin: 36px -103px 0;
     font-size: 11px ;
-    
     background-color: #fff;
     -webkit-background-clip: padding-box;
     background-clip: padding-box;
@@ -31,4 +26,16 @@
     border-radius: 4px;
     -webkit-box-shadow: 0 6px 12px rgba(0,0,0,.175);
     box-shadow: 0 6px 12px rgba(0,0,0,.175);
+}
+
+/*MOBILE*/
+.statMobile {
+    position: absolute;
+    right: 10px;
+    top: 50px;
+
+    }
+
+.statMobile .btn{
+ padding: 9px;
 }
