--- a/app/components/statistics/statistics.component.html
+++ b/app/components/statistics/statistics.component.html
@@ -1,21 +1,21 @@
 ﻿<!--STANDARD-->
 <div id="statisticsButtonId" class="statStandard" *hideItDevice="['mobile']">
-	<button type="button" class="btn btn-default desktopButton" (click)="isHidden = !isHidden"  (click)="onOpen()" [class.active]="!isHidden">         
+	<button type="button" class="btn btn-default statisMenuButtonDesktop" (click)="isHidden = !isHidden"  (click)="onOpen()" [class.active]="!isHidden">         
           <!--<img class="statListIco" src="..\app\images\graph.png">-->
           <span class="glyphicon glyphicon-signal" aria-hidden="true"></span>
           <span class="description">Statistiky čidla</span>
 		  <span class="caret"></span>
     </button>
 
-	<div id="statisticsId" class="statisticsDesktop" [collapse]="isHidden">
+	<div class="statisContentDesktop" [collapse]="isHidden">
 		<tabs-statis></tabs-statis>
 	</div>
 </div>
 
 <!--MOBILE-->
 <div id="statisticsButtonId" class="statMobile" *showItDevice="['mobile']">
-	<button type="button" class="btn btn-default statBootstrMobile statisButtonM" (click)="lgModal.show()" > 
-            <img class="statListIcoM" src="..\app\images\graph.png">    
+	<button type="button" class="btn btn-default" (click)="lgModal.show()" > 
+           <span class="glyphicon glyphicon-signal" aria-hidden="true"></span>
     </button>
 
 
