--- a/app/components/statistics/senzor.menu.component.html
+++ b/app/components/statistics/senzor.menu.component.html
@@ -18,9 +18,29 @@
 
 
 <div id="senzorMenuId" *showItDevice="['mobile']" class="senzor-button-mobile">
-	<button id="single-button" type="button" class="btn btn-default">
-        <span class="glyphicon glyphicon-dashboard" aria-hidden="true"></span>
-			</button>
+  <button id="single-button" (click)="lgModal.show()" type="button" class="btn btn-default"> 
+  	<span class="glyphicon glyphicon-dashboard" aria-hidden="true"></span>
+  </button>
+
+  <div bsModal #lgModal="bs-modal" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true">
+	<div class="modal-dialog modal-lg">
+	  <div class="modal-content">
+		<div class="modal-header">
+		  <button type="button" class="close" (click)="lgModal.hide()" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
+		  <h4 class="modal-title">Vyberte čidlo</h4>
+		</div>
+		<div class="modal-body">
+		  <ul>
+		    <li role="menuitem" *ngFor="let sensor of sensors, let ndx = index">
+			  <a (click)="onClick(sensor)" [class.red-sensor]="isSensorSelected(sensor)" [class.bold-sensor]="isSensorOnMap(sensor)">{{sensor.name}}</a>
+		    </li>
+		  </ul>	
+		</div>
+	  </div>
+	</div>
+  </div>
 </div>
 
 
