--- a/app/components/map/overlays.menu.component.html
+++ b/app/components/map/overlays.menu.component.html
@@ -14,8 +14,7 @@
 							<span class="groupItemSpan"> 
               <span class="position" *ngIf="overlay.position>0">{{overlay.position}}</span>
 							<span class="position" *ngIf!="overlay.position>0">&nbsp; &nbsp;</span>
-							<input type="checkbox" class="layerChBox" [(ngModel)]="overlay.checked" value={{overlay.value}} (ngModelChange)="onChkboxClick(overlay)"
-							/>
+							<input type="checkbox" class="layerChBox" [(ngModel)]="overlay.checked" value={{overlay.value}} (ngModelChange)="onChkboxClick(overlay)"/>
 							<span class="layerText">{{overlay.text}}</span>
 							</span>
 						</a>
@@ -33,8 +32,45 @@
 	</div>
 </div>
 
-<div id="overlaysMenuId" class="overlaysMenuMobile" *showItDevice="['mobile']">
-	<button id="single-button" type="button" class="btn btn-default layer-button">
-        <span class="glyphicon glyphicon-globe" aria-hidden="true"></span>
-			</button>
+<div id="overlaysMenuId" *showItDevice="['mobile']" class="overlaysMenuMobile">
+  <button id="single-button" (click)="lgModal.show()" type="button" class="btn btn-default layer-button"> 
+  	<span class="glyphicon glyphicon-globe" aria-hidden="true"></span>
+  </button>
+
+  <div bsModal #lgModal="bs-modal" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true">
+	<div class="modal-dialog modal-lg">
+	  <div class="modal-content">
+		<div class="modal-header">
+		  <button type="button" class="close" (click)="lgModal.hide()" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
+		  <h4 class="modal-title">Vyberte mapovou vrstvu</h4>
+		</div>
+		<div class="modal-body">
+		  <ul class="layer-button">
+			<template ngFor let-overlayGroup [ngForOf]="overlayGroups" let-i="index" [ngForTrackBy]="trackByFn">
+			  <li role="menuitem"> <span class="layerHeader">{{overlayGroup.name}}</span></li>
+			  <li role="menuitem" *ngFor="let overlay of overlayGroup.overlays">
+				<a class="dropdown-item" href="#">
+			    <span class="groupItemSpan"> 
+                  <span class="position" *ngIf="overlay.position>0">{{overlay.position}}</span>
+				  <span class="position" *ngIf!="overlay.position>0">&nbsp; &nbsp;</span>
+				  <input type="checkbox" class="layerChBox" [(ngModel)]="overlay.checked" value={{overlay.value}} (ngModelChange)="onChkboxClick(overlay)"/>
+				  <span class="layerText">{{overlay.text}}</span>
+				</span>
+				</a>
+			  </li>
+			</template>
+			<br>
+			<li role="menuitem" class="layerLegend">
+			  <span class="layerTextLegend">
+                Ln = Hlukový indikátor pro noc<br>
+                Ldvn = Hlukový indikátor pro den, večer a noc
+              </span>
+			</li>
+		  </ul>
+		</div>
+	  </div>
+	</div>
+  </div>
 </div>
