--- a/app/components/about.app.component.html
+++ b/app/components/about.app.component.html
@@ -1,4 +1,4 @@
-<div id="aboutAppId" class="aboutApp" [class.aboutApp]="!isMobile()" [class.aboutAppMobile]="isMobile()">
+<div id="aboutAppId" class="aboutApp" [class.aboutApp]="!isMobile()" [class.aboutAppMobile]="isMobile()" tooltip="O aplikaci" tooltipPopupDelay="1500" tooltipPlacement="bottom">
 
 	<button  (click)="lgModal.show()" type="button" class="btn btn-default" [class.aboutAppButton]="!isMobile()" [class.aboutAppMobileButton]="isMobile()"> 
         <!--<img class="aboutAppIcoDown" src="..\app\images\question.png">-->
