--- a/app/components/map/overlays.menu.component.html
+++ b/app/components/map/overlays.menu.component.html
@@ -1,4 +1,4 @@
-<div id="overlaysMenuId" class="overlaysMenuDesktop" *hideItDevice="['mobile']">
+<div id="overlaysMenuId" class="overlaysMenuDesktop" *hideItDevice="['mobile']" tooltip="Výběr mapové vrstvy" tooltipPopupDelay="1500" tooltipPlacement="bottom">
 	<div>
 		<div class="btn-group layer-button" dropdown autoClose="disabled">
 			<button id="single-button" type="button" class="btn btn-default layer-button" dropdownToggle autoClose="disabled">
