--- a/app/components/statistics/statistics.component.html
+++ b/app/components/statistics/statistics.component.html
@@ -1,6 +1,7 @@
 ﻿<!--STANDARD-->
 <div id="statisticsButtonId" class="statStandard" *hideItDevice="['mobile']">
-	<button type="button" class="btn btn-default statisMenuButtonDesktop" (click)="isHidden = !isHidden"  (click)="onOpen()" [class.active]="!isHidden">         
+	<button type="button" class="btn btn-default statisMenuButtonDesktop" (click)="isHidden = !isHidden"  (click)="onOpen()" [class.active]="!isHidden"
+		tooltip="Zobrazení statistiky" tooltipPopupDelay="1500" tooltipPlacement="bottom">         
           <!--<img class="statListIco" src="..\app\images\graph.png">-->
           <span class="glyphicon glyphicon-signal" aria-hidden="true"></span>
           <span class="description">Statistiky čidla</span>
