--- a/app/components/statistics/senzor.menu.component.html
+++ b/app/components/statistics/senzor.menu.component.html
@@ -1,4 +1,4 @@
-<div id="senzorMenuId" *hideItDevice="['mobile']" class="senzor-button">
+<div id="senzorMenuId" *hideItDevice="['mobile']" class="senzor-button" tooltip="Výběr čidla" tooltipPopupDelay="1500" tooltipPlacement="bottom">
 	<div (click)="$event.preventDefault()">
 		<div class="btn-group" dropdown>
 			<button id="single-button" type="button" class="btn btn-default " dropdownToggle>
