--- a/app/components/map/overlays.menu.component.css
+++ b/app/components/map/overlays.menu.component.css
@@ -22,15 +22,40 @@
   color: silver;
 }
 
+.layerTextLegendMobile {
+  text-align: left;
+  position: relative;
+  font-size: 13px;
+  color: silver;
+}
+
 .layerLegend {
+  padding-left: 7px;
+  padding-top: 4px;
+}
+
+.layerLegendMobile {
+  border-right: 0px;
+  border-left: 0px;
+  border-bottom: 0px;
+  border-top: 1px lightgray;
+  border-style: solid;
+  width: 100%;
+  position: relative;
   padding-left: 7px;
   padding-top: 4px;
 }
 
 .layerHeader {
   font-weight: bold;
-  /*font-size: larger;*/
   margin-left: 7px;
+}
+
+.layerHeaderMobile {
+  font-weight: bold;
+  margin-left: 7px;
+  margin-top: -10px;
+  padding-top: 15px;
 }
 
 .position { 
@@ -38,6 +63,11 @@
   width: 20px;
 }
 
-label {
+.overlayItem {
   width: 80%;
+  padding-bottom: 5px;
+}
+
+.group {
+  padding-top: 5px;
 }
