--- a/app/components/statistics/senzor.menu.component.css
+++ b/app/components/statistics/senzor.menu.component.css
@@ -1,4 +1,3 @@
-/*STANDARD*/
 .bold-sensor {
   font-weight: bold;
 }
@@ -16,24 +15,19 @@
   position: absolute;
   right: 410px;
   top: 10px;
-
-  /*z-index: 10 !important;
-  margin-right: 10px auto;
-  margin-top: 10px;
-  height: 38px;*/
 }
 
 .senzor-button-mobile {
   position: absolute;
   right: 50px;
   top: 50px;
-
-  /*z-index: 10 !important;
-  margin-right: 10px auto;
-  margin-top: 10px;
-  height: 38px;*/
 }
 
 .senzor-button-mobile .btn {
   padding: 9px;
+}
+
+.senzorItem {
+  width: 100%;
+  padding-bottom: 10px;
 }
