--- a/app/components/statistics/tabs.statis.component.html
+++ b/app/components/statistics/tabs.statis.component.html
@@ -1,34 +1,12 @@
-<div id="tabs" *hideItDevice="['mobile']">
+<div id="tabs" *hideItDevice="['mobile']" class="nav-link-desktop">
 	<tabset [justified]="false">
 		<tab heading="{{getName(statisType)}}" *ngFor="let statisType of statisTypeList" (select)="setSelectedStatisType(statisType)">
 			<statis [statisType]="statisType"></statis>
 		</tab>
-<!--
-		<tab heading="Hodinový" (select)="statis1.refresh($event)">
-			<statis #statis1 [statisType]="'HOUR'"></statis>
-		</tab>
-		<tab heading="Denní 6-22" (select)="statis2.refresh($event)">
-			<statis #statis2 [statisType]="'DAY6_22'"></statis>
-		</tab>
-		<tab heading="Denní 18-22" (select)="statis3.refresh($event)">
-			<statis #statis3 [statisType]="'DAY18_22'"></statis>
-		</tab>
-		<tab heading="Noční 22-6" (select)="statis4.refresh($event)">
-			<statis #statis4 [statisType]="'NIGHT22_6'"></statis>
-		</tab>
-		<tab heading="Denní 24h" (select)="statis5.refresh($event)">
-			<statis #statis5 [statisType]="'DAY24'"></statis>
-		</tab>
-		<tab heading="Týdenní" (select)="statis6.refresh($event)">
-			<statis #statis6 [statisType]="'WEEK'"></statis>
-		</tab>
-		<tab heading="Měsíční" (select)="statis7.refresh($event)">
-			<statis #statis7 [statisType]="'MONTH'"></statis>
-		</tab>-->
 	</tabset>
 </div>
 
-<div id="tabs" *showItDevice="['mobile']" class="statis-button">
+<div id="tabs" *showItDevice="['mobile']" class="statis-menu-button">
 	<div (click)="$event.preventDefault()">
 		<div class="btn-group statis-button" dropdown>
 			<button id="single-button" type="button" class="btn btn-primary statis-button" dropdownToggle>
