--- a/app/components/map/base.map.legend.component.css
+++ b/app/components/map/base.map.legend.component.css
@@ -1,17 +1,21 @@
-/*STANDARD*/
+
 .standard {
+  position: absolute;
+  bottom: 24px;
+  left: 10px;
+
   z-index: 13 !important;
-  width: 38px;
-  height: 38px;
 }
 
 .legendText {
   margin: 0px;
   padding: 2px;
   width: 45px;
+  height: 19px;
   font-family: Roboto,Arial,sans-serif;
   text-align: center;
   font-weight: bold;
+  font-size: 11;
   -webkit-box-shadow: 0px 0px 10px 4px rgba(0,0,0,0.19);
   -moz-box-shadow: 0px 0px 10px 4px rgba(0,0,0,0.19);
   box-shadow: 0px 0px 10px 4px rgba(0,0,0,0.19);
@@ -22,38 +26,43 @@
   border: 0px solid #000000;
 }
 
-.legend-vertical {
+/*.legend-vertical {
   margin-left: 11px;
   margin-top: -188px; 
   width: 100%;
   height: 100%;
-}
-
+}*/
+/*
 .legend-vertical-ie {
   margin-left: 11px;
   margin-top: -197px; 
   width: 100%;
   height: 100%;
-}
+}*/
 
-.legend-horizontal {
+/*.legend-horizontal {
   margin-left: 10px;
   width: 100%;
   height: 100%;
-}
+}*/
 
 /* MOBILE */
 .mobile {
+  position: absolute;
+  bottom: 77px;
+  left: 10px;
+
   z-index: 13 !important;
-  margin-left: 10px;
-  margin-bottom: 50px;
+}
+
+.legendText-M {
   text-align: center;
   font-family: Roboto,Arial,sans-serif;
   font-weight: bold;
   width: 40px;
-}
+  height: 15px;
+  font-size: 11;
 
-.legendText-M {
   -webkit-box-shadow: 0px 0px 10px 4px rgba(0,0,0,0.19);
   -moz-box-shadow: 0px 0px 10px 4px rgba(0,0,0,0.19);
   box-shadow: 0px 0px 10px 4px rgba(0,0,0,0.19);
