--- a/app/components/map/logo.component.html
+++ b/app/components/map/logo.component.html
@@ -1,5 +1,5 @@
 <a href="http://www.oksystem.com/cz/" class="okhome" target="_blank" *hideItDevice="['mobile']">
-    <img class="logoImage" src="..\app\images\OKsystem-logo.png">
+    <img class="logoImage" src="..\app\images\OKsystem-logo-sm.png">
 </a>
 
 
