--- a/app/components/statistics/chart.component.css
+++ b/app/components/statistics/chart.component.css
@@ -3,14 +3,17 @@
     margin-top: 10px;
 }*/
 
-.chartDesktop{
+/*.chartDesktop{
      margin-left: 10px; 
+
      padding-top: 12px; 
-     padding-right: 12px;
+     padding-right: 12px;*/
+
+
     /*width: 100%;*/
     /*height: 400px;*/
     /*background-color: red;*/
-}
+/*}*/
 
 /*.chartMobile{*/
     /*width: 100%;*/
