--- a/app/components/statistics/statis.component.css
+++ b/app/components/statistics/statis.component.css
@@ -1,3 +1,9 @@
  /*#statis {
    z-index: 18 !important;
  }*/
+
+ .chartDesktop{
+     margin-left: 10px;    
+     padding-top: 12px; 
+     padding-right: 12px;
+ }
