--- a/app/components/statistics/statis.component.html
+++ b/app/components/statistics/statis.component.html
@@ -1,5 +1,5 @@
 <div id="statis">
     <table-statis [statisType]="statisType"></table-statis>
-    <chart [statisType]="statisType"></chart>   
+    <chart [statisType]="statisType" class="chartDesktop"></chart>   
     <slider-statis [statisType]="statisType"></slider-statis> 
 </div>
