--- a/app/components/statistics/statis.component.html
+++ b/app/components/statistics/statis.component.html
@@ -1,5 +1,9 @@
-<div id="statis">
-    <table-statis [statisType]="statisType"></table-statis>
-    <chart [statisType]="statisType" class="chartDesktop"></chart>   
-    <slider-statis [statisType]="statisType"></slider-statis> 
+<div class="tableDesktop">
+	<table-statis [statisType]="statisType"></table-statis>
+</div>
+<div class="chartDesktop">
+	<chart [statisType]="statisType"></chart>
+</div>
+<div class="sliderDesktop">
+	<slider-statis [statisType]="statisType"></slider-statis>
 </div>
