zmena legendy a pokus o upravu controls

--- a/app/components/about.app.component.css
+++ b/app/components/about.app.component.css
@@ -6,14 +6,13 @@
 }
 
 /*MOBILE*/
-.aboutAppMobile {
+/*.aboutAppMobile {
   position: absolute;
   right: 10px;
   top: 10px;
+}*/
 
-}
-
-.aboutAppMobileButton{
+.aboutAppMobileButton {
   padding: 9px;
 }
 
