--- a/app/components/about.app.component.html
+++ b/app/components/about.app.component.html
@@ -1,6 +1,6 @@
 <div id="aboutAppId" class="aboutApp" tooltip="O aplikaci" tooltipPopupDelay="1500" tooltipPlacement="bottom">
 
-	<button  (click)="lgModal.show()" type="button" class="btn btn-default"> 
+	<button  (click)="lgModal.show()" type="button" class="btn btn-default aboutAppMobileButton"> 
         <!--<img class="aboutAppIcoDown" src="..\app\images\question.png">-->
 				<span class="glyphicon glyphicon-question-sign" aria-hidden="true"></span>
 				<span *hideItDevice="['mobile']">O webu</span>
