--- a/app/components/map/overlays.menu.component.css
+++ b/app/components/map/overlays.menu.component.css
@@ -51,6 +51,19 @@
   margin-left: 7px;
 }
 
+/*.layerMainHeader {
+  font-weight: bold;
+  color: cornflowerblue;
+  width: 100%;
+  text-align: center;
+}
+
+.mapSection {
+  width: 100%;
+  margin-top: 5px;
+  margin-bottom: 10px;
+}*/
+
 .layerHeaderMobile {
   font-weight: bold;
   margin-left: 7px;
