--- a/app/components/about.app.component.css
+++ b/app/components/about.app.component.css
@@ -1,28 +1,14 @@
-/*STANDARD*/
 .aboutApp {
   position: absolute;
   right: 10px;
   top: 10px;
 }
 
-/*MOBILE*/
-/*.aboutAppMobile {
-  position: absolute;
-  right: 10px;
-  top: 10px;
-}*/
-
 .aboutAppMobileButton {
   padding: 9px;
 }
 
-/*
-.aboutAppButtonM {
-  width: 100%;
-  height: 100%;
-  background-color: white;
-  border-color: transparent;
-  margin-right: 10px;
-  padding-left: 3px;
-  padding-top: 2px;
-}*/
+.aboutAppButton {
+  /*padding: 0px;*/
+  margin: 0px;
+}
