--- a/app/components/about.app.component.html
+++ b/app/components/about.app.component.html
@@ -1,6 +1,6 @@
 <div id="aboutAppId" class="aboutApp" tooltip="O aplikaci" tooltipPopupDelay="1500" tooltipPlacement="bottom">
 
-	<button  (click)="lgModal.show()" type="button" class="btn btn-default aboutAppMobileButton"> 
+	<button  (click)="lgModal.show()" type="button" class="btn btn-default aboutAppMobileButton" [class.aboutAppButton]="!isMobile()" [class.aboutAppMobileButton]="isMobile()"> 
         <!--<img class="aboutAppIcoDown" src="..\app\images\question.png">-->
 				<span class="glyphicon glyphicon-question-sign" aria-hidden="true"></span>
 				<span *hideItDevice="['mobile']">O webu</span>
@@ -11,7 +11,7 @@
 		<div class="modal-dialog modal-lg">
 			<div class="modal-content">
 				<div class="modal-header">
-					<button type="button" class="close" (click)="lgModal.hide()" aria-label="Close">
+					<button type="button" class="close aboutAppButton" (click)="lgModal.hide()" aria-label="Close">
           <span aria-hidden="true">&times;</span>
         </button>
 					<h4 class="modal-title">O společnosti OKSystem a.s.</h4>
