--- a/app/components/map/base.map.legend.component.css
+++ b/app/components/map/base.map.legend.component.css
@@ -53,8 +53,8 @@
 /* MOBILE */
 .mobile {
   position: absolute;
-  top: 130px;
-  right: 10px;
+  bottom: 257px;
+  left: 42px;
   z-index: 13 !important;
 }
 
@@ -62,8 +62,6 @@
   position: absolute;
   right: 0px;
   top: 0px;
-  /*right: 10px;
-  top: 89px;*/
 }
 
 .legendButtonMobile {
@@ -74,7 +72,6 @@
   text-align: center;
   font-family: Roboto,Arial,sans-serif;
   font-weight: bold;
-  /*width: 33px;*/
   height: 15px;
   font-size: 11;
 
@@ -89,5 +86,5 @@
 }
 
 .mobile > div > div {
-  margin-top: 10px;
+  width: 33px;
 }
