data v tabulce jsou setrizena od nemladsiho

--- a/app/components/statistics/table.component.html
+++ b/app/components/statistics/table.component.html
@@ -6,7 +6,7 @@
 		</tr>
 	</thead>
 	<tbody>
-		<tr *ngFor="let data of showDataLabels.data, let ndx = index" 
+		<tr *ngFor="let data of showDataLabels.data | reverse" 
 		[class.offLimit]="offLimit(data.data)" 
 		[class.underLimit]="!offLimit(data.data)" 
 		[class.info]="isChoosen(data.label)"
