--- a/app/components/slider.component.css
+++ b/app/components/slider.component.css
@@ -6,7 +6,7 @@
 }
 
 .rect3 {
-    z-index: 12;
+    /*z-index: 12;*/
     position: relative;
     width:100%;
     padding-right: 135px;
@@ -24,7 +24,7 @@
 }
 
 #rectangle2 {
-    z-index: 11;
+    /*z-index: 11;*/
     padding-right: 36px;
     padding-left: 36px;
     padding-top: 2px;
@@ -44,7 +44,7 @@
   }
 
 #rectangle2IE {
-    z-index: 11;
+    /*z-index: 11;*/
     padding-right: 36px;
     padding-left: 46px;
     padding-top: 2px;
