--- a/app/components/statistics/statis.component.html
+++ b/app/components/statistics/statis.component.html
@@ -1,9 +1,34 @@
+<!--<div *responsive="{
+                      orientation:['landscape','portrait'],
+                      device: ['tablet','smarttv','desktop']
+  }" class="tableDesktop">
+	<table-statis [statisType]="statisType"></table-statis>
+</div>
+
+<div *responsive="{
+                      orientation:['landscape'],
+                      device: ['mobile']
+  }" class="tableMobileLandscape">
+	<table-statis [statisType]="statisType"></table-statis>
+</div>
+
+
+<div *responsive="{
+                      orientation:['portrait'],
+                      device: ['mobile']
+  }" class="tableDesktop">
+	<table-statis [statisType]="statisType"></table-statis>
+</div>-->
+
+
 <div class="tableDesktop">
 	<table-statis [statisType]="statisType"></table-statis>
 </div>
+
 <div class="chartDesktop">
 	<chart [statisType]="statisType"></chart>
 </div>
+
 <div class="sliderDesktop">
 	<slider-statis [statisType]="statisType"></slider-statis>
 </div>
