zmena landscape loga u mobilu

--- a/app/components/map/overlays.search.component.html
+++ b/app/components/map/overlays.search.component.html
@@ -9,7 +9,8 @@
 <!--MOBILE-->
 <div class="form-group has-success has-feedback overlaysSearchStandard overlaysSearchMobile" *showItDevice="['mobile']">
     <div class="input-group">
-        <span class="input-group-addon smallBorder"><logo></logo></span>
+        <span *isPortrait class="input-group-addon"><logo></logo></span>
+        <span *isLandscape class="input-group-addon smallBorder"><logo></logo></span>
         <search></search>       
     </div>  
 </div>
