--- a/app/components/map/logo.component.html
+++ b/app/components/map/logo.component.html
@@ -4,5 +4,6 @@
 
 
 <a href="http://www.oksystem.com/cz/" class="okhome-M" target="_blank" *showItDevice="['mobile']">
-    <img class="logoImage-M" src="..\app\images\OK1.png">
+    <img *isPortrait class="logoImage" src="..\app\images\OKsystem-logo-sm.png">
+    <img *isLandscape class="logoImage-M" src="..\app\images\OK1.png">
 </a>
