--- a/app/components/statistics/statistics.component.html
+++ b/app/components/statistics/statistics.component.html
@@ -1,6 +1,6 @@
 ﻿<!--STANDARD-->
 <div id="statisticsButtonId" class="statStandard" *hideItDevice="['mobile']">
-	<button type="button" class="btn btn-default statisMenuButtonDesktop" (click)="isHidden = !isHidden"  (click)="onOpen()" [class.active]="!isHidden"
+	<button type="button" class="btn btn-default statisMenuButtonDesktop" (click)="isHidden = !isHidden"  (click)="onOpen()" [class.focus]="!isHidden"
 		tooltip="Zobrazení statistiky" tooltipPopupDelay="1500" tooltipPlacement="bottom">         
           <!--<img class="statListIco" src="..\app\images\graph.png">-->
           <span class="glyphicon glyphicon-signal" aria-hidden="true"></span>
@@ -9,7 +9,9 @@
     </button>
 
 	<div class="statisContentDesktop" [collapse]="isHidden">
-		<tabs-statis></tabs-statis>
+		<div class="statisContentDesktopOverflow">
+			<tabs-statis></tabs-statis>
+		</div>
 	</div>
 </div>
 
